# dz-8-main

./: blog.db  pyproject.toml
app/: __init__.py
app/data/: answers.txt
app/db/: __init.py
app/db/models/: pizza.py
app/routes/: __init__.py  pizza.py
app/templates/: _navigation.html  add_pizza.html  answers.html  edit_pizza.html  index.html  vote.html
